--- a/macros.tex
+++ b/macros.tex
@@ -1,5 +1,7 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
+\newcommand{\epm}{$e^+ e^-$}
+\newcommand{\qqbar}{$q \bar{q}$}
 \newcommand{\sigmainel}{\sigma_{\mathrm{inel}}^{\mathrm{NN}}}
 \newcommand{\DeltaP}{$\Delta_P(\rvar)$}
 \newcommand{\DeltaTheta}{$\Delta_{\Theta(\rvar)}$}
