--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -67,9 +67,18 @@
 \setcounter{page}{2}
 \begin{abstract}
 
-Heavy ion collision experiments have been centered around studying the extreme state of matter formed in such collisions, the quark-gluon plasma. There have been efforts to measure and characterize this state of matter for almost two decades, first at the Relativistic Heavy Ion Collider and subsequently at the Large Hadron Collider. While there have been different approaches to study it, correlated particle showers called jets have found a special place as a probe of the QGP. Arising from highly energetic collisions between partons, jets are formed early enough in heavy ion collisions that they experience the formation of the QGP and its evolution. They are modified from what they would be in a vacuum, and studying these modifications can give insight into the properties of the QGP as well as the strong interaction.
+Heavy ion collision experiments have been centered around studying the extreme state of matter formed in such collisions, the quark-gluon plasma.
+There have been efforts to measure and characterize this state of matter for almost two decades, first at the Relativistic Heavy Ion Collider and subsequently at the Large Hadron Collider.
+While there have been different approaches to study it, correlated particle showers called jets have found a special place as a probe of the QGP.
+Arising from highly energetic collisions between partons, jets are formed early enough in heavy ion collisions that they experience the formation of the QGP and its evolution.
+They are modified from what they would be in a vacuum, and studying these modifications can give insight into the properties of the QGP as well as the strong interaction.
 
-Jet measurements can focus on a variety of observables like yields, momenta, or fragmentation patterns, each with its own limitations and advantages. This thesis presents a measurement of the angular distribution of charged particles around the jet axis as measured by the ATLAS detector for \pbpb\ and \pp\ collisions with a center of mass energy of $\sqrt{s_{\mathrm{NN}}}=$~5.02~TeV. Comparing the measurement in the two  systems shows that charged particles carrying a transverse momenta \pt\ of less than 4 GeV have a broader distribution in \pbpb\ collisions, while those with $\pt > 4$ GeV have a narrower distribution. Furthermore, there is an enhancement for particles with $\pt < 4$ GeV in \pbpb\ collisions, with the enhancement increasing up to 2 for \mbox{$\rvar < 0.3$} from the jet axis, and remaining constant for \mbox{$0.3 < \rvar < 0.6$}. Charged particles with $\pt\ > 4$ \GeV\ show a small enhancement in the jet core for $\rvar < 0.05$, and are increasingly suppressed up to 0.5 for \mbox{$\rvar < 0.3$}. This depletion remains constant for \mbox{$0.3 < \rvar < 0.6$}.
+Jet measurements can focus on a variety of observables like yields, momenta, or fragmentation patterns, each with its own limitations and advantages.
+This thesis presents a measurement of the angular distribution of charged particles around the jet axis as measured by the ATLAS detector for \pbpb\ and \pp\ collisions with a center of mass energy of $\sqrt{s_{\mathrm{NN}}}=$~5.02~TeV.
+Comparing the measurement in the two  systems shows that charged particles carrying a transverse momenta \pt\ of less than 4 GeV have a broader distribution in \pbpb\ collisions, while those with $\pt > 4$ GeV have a narrower distribution.
+Furthermore, there is an enhancement for particles with $\pt < 4$ GeV in \pbpb\ collisions, with the enhancement increasing up to 2 for \mbox{$\rvar < 0.3$} from the jet axis, and remaining constant for \mbox{$0.3 < \rvar < 0.6$}.
+Charged particles with $\pt\ > 4$ \GeV\ show a small enhancement in the jet core for $\rvar < 0.05$, and are increasingly suppressed up to 0.5 for \mbox{$\rvar < 0.3$}.
+This depletion remains constant for \mbox{$0.3 < \rvar < 0.6$}.
 
 \end{abstract}
 
