--- a/jets.tex
+++ b/jets.tex
@@ -1,15 +1,49 @@
 % !TEX root = thesis-ex.tex
 %TODO: add JES/JER plots
 
-Hard scatterings in particle collisions result in the production of highly energetic partons that form conical sprays of hadrons called jets. A schematic of this process is shown in Figure~\ref{fig:feynman_jet}. Jet production in a vacuum is well described in context of perturbative QCD \cite{Sjostrand:2007gs} where processes involving large momentum transfers like high \pt\ hadron production can be described in terms of the parton distribution functions, scattering cross sections, and final state fragmentation functions as shown below \cite{Qin:2015srf}:
+As colored objects start to fly apart in a particle collision, the energy required to separate them increases as a natural consequence of color confinement.
+If the energy with which they are flying apart is greater than the energy required to separate them, it becomes more favorable to produce a quark-antiquark ($q\bar{q}$) pair between the original two quarks.
+This process of $q \bar{q}$ production continues recursively until it is not energetically favorable to do so, with the end result being conical sprays of hadrons called jets.
+This picture is qualitatively supported by Lattice QCD \cite{PhysRevD.71.114513}. 
+A schematic of this process is shown in Figure~\ref{fig:qqbar_to_jet}.
+Because of their color charge, gluon led jets have a softer fragmentation and result in more particles carrying lesser energy as compared to quark led jets \cite{Abbiendi:1999pi}.
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.55\textwidth]{figures/theory/qqbar_to_jet}
+\caption{A schematic of how jets are produced from a hard process involving $q \bar{q}$. The gluonic flux tubes build up and break as the quarks gain energy, and result in the formation of new \qqbar\ pairs.}
+\label{fig:qqbar_to_jet}
+\end{center}
+\end{figure}
+
+
+
+\subsection{Jets in $e^+ e^-$ collisions}
+The simplest process that can be used to study jets is the process $e^+ e^- \rightarrow q \bar{q} \rightarrow 2 \text{ jets}$.
+The electron and positron annihilates to produce a photon that can decay into a $q \bar{q}$ pair, that hadronize and form jets.
+In fact, this was the process that provided experiment evidence of jets at SPEAR (Stanford Positron Electron Accelerating Ring) at SLAC in 1975, where it was observed that the distribution of final state hadrons was not isotropic \cite{PhysRevLett.35.1609, PhysRevD.26.991} 
+Analyses of these distributions showed that they were associated with spin $1/2$ quarks.
+Jets in $e^+ e^-$ collisions further provided the first indirect evidence of gluons when three jet events were observed in the $\Upsilon \rightarrow ggg$ decay \cite{Berger:1978rr, Berger:1979cj}. 
+At the Large Electron-Positron Collider (LEP), higher collision energies allowed the $e^+ e^- \rightarrow Z^0 \rightarrow q \bar{q}$ process.
+In these processes, to leading order, the \qqbar\ pair evolved via gluon radiation before converting to hadrons \cite{Mueller_1991}, allowing for events with more than two jets.
+Jet production in \epm\ collisions is also one of the best ways to test the validity of perturbative QCD \cite{Kramer:1986mc}.
+
+
+
+%%%%%%%%%%%%%%%%%%%
+\subsection{Jets in $pp$ collisions}
+Jet production in a vacuum is well described in context of perturbative QCD \cite{Sjostrand:2007gs}.
+Processes involving large momentum transfers like high \pt\ hadron production as shown in Figure~\ref{fig:feynman_jet}.
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.35\textwidth]{figures/theory/feynman_jet}
-\caption{Jet production from the process $pp \rightarrow hX$, factorizing in terms of the parton distribution functions, scattering cross sections, and jet fragmentation functions. \cite{Qin:2015srf}}
+\caption{Jet production from the process $pp \rightarrow hX$, factorizing in terms of the parton distribution functions, scattering cross sections, and jet fragmentation functions \cite{Qin:2015srf}.}
 \label{fig:feynman_jet}
 \end{center}
 \end{figure}
+
+These processes can be described in terms of the parton distribution functions, scattering cross sections, and final state fragmentation functions as shown below \cite{Qin:2015srf}:
 
 \begin{align}
 \label{eq:hadronCS}
@@ -17,21 +51,39 @@ d \sigma_{pp \rightarrow hX} \approx & \sum_{abjd} \int dx_a \int dx_b \int dz_j
 & \otimes d\sigma_{ab\rightarrow jd} (\mu_f, \mu_F, \mu_R)  \nonumber \\
 & \otimes D_{j \rightarrow h} (z_j, \mu_f) \nonumber
 \end{align}
-where $x_a = p_a/P_A, x_b = p_b / P_b$ are the initial momentum fractions carried by the interacting partons, $z_j = p_h / p_j$ is the momentum fraction carried by the final observed hadron. $f_{a/p} (x_a, \mu_f)$ and $f_{b/p} (x_b, \mu_f)$ are the two parton distribution functions (PDFs), $d\sigma_{ab\rightarrow jd} (\mu_f, \mu_F, \mu_R)$ is the differential cross section for parton scattering and $D_{j\rightarrow }(z_j,\mu_F)$ is the fragmentation function (FFs) for parton $j$ to hadron $h$. $\mu_f$ and $\mu_F$ are the factorization scales and $\mu_R$ is the renormalization scale, and are typically taken to be the same hard scale $Q$. The PDFs characterize the initial state and represent the probability of finding a parton with momentum fraction $x$ (shown in Figure~\ref{fig:bjorkenX}) in the initial hadron, while the FFs describe the probability of fragmenting to a hadron $h$ with given kinematic properties.
+where $x_a = p_a/P_A, x_b = p_b / P_b$ are the initial momentum fractions carried by the interacting partons, $z_j = p_h / p_j$ is the momentum fraction carried by the final observed hadron.
+$f_{a/p} (x_a, \mu_f)$ and $f_{b/p} (x_b, \mu_f)$ are the two parton distribution functions (PDFs), $d\sigma_{ab\rightarrow jd} (\mu_f, \mu_F, \mu_R)$ is the differential cross section for parton scattering and $D_{j\rightarrow }(z_j,\mu_F)$ is the fragmentation function (FFs) for parton $j$ to hadron $h$.
+$\mu_f$ and $\mu_F$ are the factorization scales and $\mu_R$ is the renormalization scale, and are typically taken to be the same hard scale $Q$.
+The PDFs, measured via DIS experiments, characterize the initial state and represent the probability of finding a parton with longitudinal momentum fraction $x$ (shown in Figure~\ref{fig:bjorkenX}) in the initial hadron, while the FFs describe the probability of fragmenting to a hadron $h$ with given kinematic properties.
+Jet cross sections in \pp\ and $\p \bar{p}$ collisions measured by a variety of different experiments are shown in Figure~\ref{fig:jetcs_pp}. 
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.55\textwidth]{figures/theory/bjorkenX}
-\caption{The next to leading order (NLO) PDFs at (left) $Q^2 = 10 \mathrm{GeV}^2$ and (right) $Q^2 = 10^4 \mathrm{GeV}^2$. The band is the associated one-sigma (68\%) confidence level uncertainty. Taken from \cite{Martin2009}}
+\caption{The next to leading order (NLO) PDFs at (left) $Q^2 = 10 \mathrm{GeV}^2$ and (right) $Q^2 = 10^4 \mathrm{GeV}^2$.
+The band is the associated one-sigma (68\%) confidence level uncertainty.
+Taken from \cite{Martin2009}.}
 \label{fig:bjorkenX}
+\end{center}
+\end{figure}
+ 
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{figures/theory/jetcs_pp}
+\caption{Inclusive differential jet cross sections shown as a function of jet transverse momentum from different experiments.
+Figure taken from \cite{Olive_2016}.}
+\label{fig:jetcs_pp}
 \end{center}
 \end{figure}
 
 
-%Both the PDFs and FFs are universal and their scale dependence evolves via the Dokshitzer-Gribov-Lipatov-Altarelli-Parisi (DGLAP) equations \cite{ALTARELLI1977298, Gribov:1972ri, Dokshitzer:1977sg}. These calculations can be compared to the inclusive charged particle distributions in \sqrts = 13 TeV \pp\ collisions and shown in Figure~\ref{fig:inclhadronCS}.  
+This factorization of the jet production process is crucial because it allows for independently calculating the different components of the cross sections \cite{Majumder:2010qh}.
+This in particular enables direct comparisons of jet observables in \pp\ collisions to those in heavy ion collisions and determine their modifications.
 
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Jets in heavy ion collisions}
+%Both the PDFs and FFs are universal and their scale dependence evolves via the Dokshitzer-Gribov-Lipatov-Altarelli-Parisi (DGLAP) equations \cite{ALTARELLI1977298, Gribov:1972ri, Dokshitzer:1977sg}.
+%These calculations can be compared to the inclusive charged particle distributions in \sqrts = 13 TeV \pp\ collisions and shown in Figure~\ref{fig:inclhadronCS}.
 %The energy lost by a jet serves as further confirmation that the medium produced in a heavy ion collision is strongly coupled.
 
 In the case of heavy ion collisions, the jet observables can be modified due to two sources: the nuclear PDF being distinct from a proton PDF, and the formation of the quark gluon plasma.
@@ -41,29 +93,46 @@ The former is collectively referred to as cold nuclear matter (CNM) effect, and 
 \begin{align}
 R_a^A (x, Q^2) = \frac{f_{a/A} (x, Q^2)}{f_{a/p}(x, Q^2)}
 \end{align}
-where $f_{a/A}$ and $f_{a/p}$ are the nuclear and proton PDFs respectively. This $R_a^A$ factor is determined by global fits to data from DIS measurements \cite{PhysRevC.76.065207, PhysRevD.69.074028, Eskola_2009}. CNM effects include the following contributions:
+where $f_{a/A}$ and $f_{a/p}$ are the nuclear and proton PDFs respectively.
+This $R_a^A$ factor is determined by global fits to data from DIS measurements \cite{PhysRevC.76.065207, PhysRevD.69.074028, Eskola_2009}.
+CNM effects include the following contributions:
 \begin{itemize}
-\item Shadowing: This is a destructive interference effect that reduces the interactions of a nucleon incident on a nucleus within its interior and on its back face. This effect reduces the effective number of nucleons in an inelastic interaction to $A^{2/3}$. For $Q^2$ of the order of a few $\mathrm{GeV}^2$, this effect dominates for $x < 0.05$ and implies $R_a^A (x, Q^2) < 1$  \cite{PhysRevLett.64.1342}.
+\item Shadowing: This is a destructive interference effect that reduces the interactions of a nucleon incident on a nucleus within its interior and on its back face.
+This effect reduces the effective number of nucleons in an inelastic interaction to $A^{2/3}$.
+For $Q^2$ of the order of a few $\mathrm{GeV}^2$, this effect dominates for $x < 0.05$ and implies $R_a^A (x, Q^2) < 1$  \cite{PhysRevLett.64.1342}.
 \item Anti-shadowing: This compensates for the shadowing effect based on the momentum sum rule, and for $Q^2$ of the order of a few $\mathrm{GeV}^2$ implies $R_a^A (x, Q^2) > 1$ over the region $0.05 < x < 0.20$.
-\item EMC: The modification of the nuclear structure function was first observed by the European Muon Collaboration \cite{AUBERT1983275}. Recent observations have suggested that the effect is caused by short-range correlated nucleon pairs within nuclei \cite{PhysRevC.85.047301}. For $Q^2$ of the order of a few $\mathrm{GeV}^2$, this effect dominates for $0.2 < x < 0.80$ and implies $R_a^A (x, Q^2) < 1$.
-\item  Fermi Motion: This effect considers the motion of the nucleons within the nucleus. It results in $R_a^A (x, Q^2) > 1$  over the $x > 0.8$ region for $Q^2$ of the order of a few $\mathrm{GeV}^2$ \cite{Saito:1985ct}.
+\item EMC: The modification of the nuclear structure function was first observed by the European Muon Collaboration \cite{AUBERT1983275}.
+Recent observations have suggested that the effect is caused by short-range correlated nucleon pairs within nuclei \cite{PhysRevC.85.047301}.
+For $Q^2$ of the order of a few $\mathrm{GeV}^2$, this effect dominates for $0.2 < x < 0.80$ and implies $R_a^A (x, Q^2) < 1$.
+\item  Fermi Motion: This effect considers the motion of the nucleons within the nucleus.
+It results in $R_a^A (x, Q^2) > 1$  over the $x > 0.8$ region for $Q^2$ of the order of a few $\mathrm{GeV}^2$ \cite{Saito:1985ct}.
 \end{itemize}
 
-Cold nuclear matter effects are experimentally measured using $p+A$ systems where the size and shape of the plasma, and hence any effects thereof, are a lot smaller. 
+Cold nuclear matter effects are experimentally measured using $p+A$ systems where the size and shape of the plasma, and hence any effects thereof, are a lot smaller.
 
-The second source of modification is the formation of the hot and dense quark gluon plasma. The hot nuclear matter effects further serve as an independent confirmation that the medium formed is strongly interacting. Jets are formed early enough that they traverse the Quark Gluon Plasma and as strongly interacting particles, are both affected by, and affect the QGP. This interaction typically results in the jet losing energy and forward momentum \cite{2012176, ATLAS:2017wvp}, with the lost energy being deposited in the medium \cite{Khachatryan2016}. Jets can also pick up momentum transverse to the parton direction \cite{Chatrchyan:2012nia}. The hot nuclear matter effects can be considered to be a combination of collisional and radiative energy losses summarized in Figure~\ref{fig:jetEnergyLoss}.
+
+The second source of modification is the formation of the hot and dense quark gluon plasma.
+The hot nuclear matter effects further serve as an independent confirmation that the medium formed is strongly interacting.
+Jets are formed early enough that they traverse the Quark Gluon Plasma and as strongly interacting particles, are both affected by, and affect the QGP.
+This interaction typically results in the jet losing energy and forward momentum \cite{2012176, ATLAS:2017wvp}, with the lost energy being deposited in the medium \cite{Khachatryan2016}.
+Jets can also pick up momentum transverse to the parton direction \cite{Chatrchyan:2012nia}.
+The hot nuclear matter effects can be considered to be a combination of collisional and radiative energy losses summarized in Figure~\ref{fig:jetEnergyLoss}.
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.75\textwidth]{figures/theory/jetEnergyLoss}
-\caption{The typical diagrams for (left) collisional and (right) radiative energy losses for a parton in a hard scattering as it propagates through the QGP. Taken from \cite{Qin:2015srf}}
+\caption{The typical diagrams for (left) collisional and (right) radiative energy losses for a parton in a hard scattering as it propagates through the QGP.
+Taken from \cite{Qin:2015srf}}
 \label{fig:jetEnergyLoss}
 \end{center}
 \end{figure}
 
 \begin{itemize}
-\item Collisional energy loss: This is a combination of elastic and inelastic collisions of the hard parton with the constituents of the quark gluon plasma. 
-\item Radiative energy loss: This is the larger source of parton energy loss and jet quenching. These are modified by the presence of the plasma due to scatterings off of the plasma constituents. A variety of radiative energy loss frameworks that have been developed include: Baier-Dokshitzer-Mueller-Peigne-Schiff-Zakharov (BDMPS-Z) \cite{BAIER1997291}, Gyulassy, Levai and Vitev (GLV) \cite{Gyulassy:1999zd}, Amesto-Salgado-Wiedemann (ASW) \cite{Wiedemann:2000za},  Arnold-Moore-Yaffe (AMY) \cite{Arnold:2001ba} and higher twist (HT) \cite{Guo:2000nz}.
+\item Collisional energy loss: This is a combination of elastic and inelastic collisions of the hard parton with the constituents of the quark gluon plasma.
+
+\item Radiative energy loss: This is the larger source of parton energy loss and jet quenching.
+These are modified by the presence of the plasma due to scatterings off of the plasma constituents.
+A variety of radiative energy loss frameworks that have been developed include: Baier-Dokshitzer-Mueller-Peigne-Schiff-Zakharov (BDMPS-Z) \cite{BAIER1997291}, Gyulassy, Levai and Vitev (GLV) \cite{Gyulassy:1999zd}, Amesto-Salgado-Wiedemann (ASW) \cite{Wiedemann:2000za},  Arnold-Moore-Yaffe (AMY) \cite{Arnold:2001ba} and higher twist (HT) \cite{Guo:2000nz}.
 \end{itemize}
 
 Both hot and cold nuclear matter effects can be described by modifying Equation~\ref{eq:hadronCS} as:
@@ -74,7 +143,8 @@ d \sigma_{AB \rightarrow hX}  \approx & \sum_{abjj'd} f_{a/A} (x_a) \otimes f_{b
 & \otimes D_{h \rightarrow j'} (z_j, \mu_f) \nonumber 
 \end{align}
 
-where the additional $P_{j\rightarrow j'}$ describes the interaction of the hard parton with the colored medium. This is typically taken as part of the fragmentation modification as:
+where the additional $P_{j\rightarrow j'}$ describes the interaction of the hard parton with the colored medium.
+This is typically taken as part of the fragmentation modification as:
 
 \begin{align}
 \widetilde{D}_{h \rightarrow j'} (z_j, \mu_f) \approx \sum_{j'} P_{j\rightarrow j'} (p_{j'} | p_j) \otimes D_{h\rightarrow j'} (_{j'})
@@ -82,7 +152,9 @@ where the additional $P_{j\rightarrow j'}$ describes the interaction of the hard
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Jet Reconstruction}
-Jets can reconstructed by clustering algorithms that take in a variety of inputs. The algorithm used in ATLAS is the \antikt\ clustering algorithm \cite{Cacciari:2008gp}. This algorithm clusters soft particles around hard ones in the following manner:
+Jets can reconstructed by clustering algorithms that take in a variety of inputs.
+The algorithm used in ATLAS is the \antikt\ clustering algorithm \cite{Cacciari:2008gp}.
+This algorithm clusters soft particles around hard ones in the following manner:
 
 \begin{itemize}
 \item Calculate all distances $d_{ij}$ between entities $i$ and $j$, and distance $d_{iB}$ between entity $i$ and beam $B$.
@@ -98,52 +170,77 @@ d_{ij} &= \mathrm{min} (k_{Ti}^{2p} , k_{Tj}^{2p}) \frac{\Delta_{ij}^2}{R^2}  \\
 d_{iB} &= k_{Ti}^{2p}
 \end{align}
 
-where $k_{Ti}$ is the transverse momentum of particle $i$ and $\Delta_{ij} = \sqrt{\Delta\eta_{ij}^2 + \Delta\phi_{ij}^2}$ is the distance between particles $i$ and $j$ in $\eta-\phi$ space. $R$ the distance parameter and reflects the size of the jet being considered. In the case of the \antikt\ algorithm, $p = -1$. Other popular clustering algorithms like \kt\ \cite{Catani:1993hr} and Cambridge/Aachen \cite{Dokshitzer:1997in} use $p = 1$ and $p=0$ respectively. The behavior of the different clustering algorithms is shown in Figure~\ref{fig:JetClustering}. 
+where $k_{Ti}$ is the transverse momentum of particle $i$ and $\Delta_{ij} = \sqrt{\Delta\eta_{ij}^2 + \Delta\phi_{ij}^2}$ is the distance between particles $i$ and $j$ in $\eta-\phi$ space.
+$R$ the distance parameter and reflects the size of the jet being considered.
+In the case of the \antikt\ algorithm, $p = -1$.
+Other popular clustering algorithms like \kt\ \cite{Catani:1993hr} and Cambridge/Aachen \cite{Dokshitzer:1997in} use $p = 1$ and $p=0$ respectively.
+The behavior of the different clustering algorithms is shown in Figure~\ref{fig:JetClustering}.
+
 
 \begin{figure}[htp]
 \centering
 \includegraphics[width=.3\textwidth]{theory/jetReco_kt}\hfill
 \includegraphics[width=.3\textwidth]{theory/jetReco_CA}\hfill
 \includegraphics[width=.3\textwidth]{theory/jetReco_antikt}\hfill
-\caption{Different clustering algorithms applied to the sample parton-level event. Figure taken from \cite{Cacciari:2008gp}.}
+\caption{Different clustering algorithms applied to the sample parton-level event.
+Figure taken from \cite{Cacciari:2008gp}.}
 \label{fig:JetClustering}
 \end{figure}
 
-The popularity of the \antikt\ algorithm comes from its overcoming of two common problems: collinear and infrared safety. These are related to instabilities in the cones that are found due to soft radiation. 
+The popularity of the \antikt\ algorithm comes from its overcoming of two common problems: collinear and infrared safety.
+These are related to instabilities in the cones that are found due to soft radiation.
 
-Figure~\ref{fig:collinearSafe} describes the collinear safety problem. In a collinear safe jet algorithm, the presence of a virtual loop or a collinear splitting of a central particle would not change the number of jets being reconstructed. On the other hand, while a collinear unsafe jet algorithm would not change its output with the presence of a virtual loop, a splitting in the central particle would lead to the left and right most particles forming individual seeds, implying two reconstructed jets \cite{Salam:2009jx}.
+
+Figure~\ref{fig:collinearSafe} describes the collinear safety problem.
+In a collinear safe jet algorithm, the presence of a virtual loop or a collinear splitting of a central particle would not change the number of jets being reconstructed.
+On the other hand, while a collinear unsafe jet algorithm would not change its output with the presence of a virtual loop, a splitting in the central particle would lead to the left and right most particles forming individual seeds, implying two reconstructed jets \cite{Salam:2009jx}.
 
 \begin{figure}[htp]
 \centering
 \includegraphics[width=.75\textwidth]{theory/collinearSafe}
-\caption{An illustration of collinear unsafe behavior. The particle \pt\ is proportional to the height and the horizontal axis indicates rapidity. Taken from \cite{Salam:2009jx}. }
+\caption{An illustration of collinear unsafe behavior.
+The particle \pt\ is proportional to the height and the horizontal axis indicates rapidity.
+Taken from \cite{Salam:2009jx}.
+}
 \label{fig:collinearSafe}
 \end{figure}
 
 
-A schematic describing infrared safety problem is shown in Figure~\ref{fig:infraredSafe}. Here an infrared safe algorithm would use the three particles as seeds iteratively find two stable cones. An unsafe algorithm however would find three overlapping cones based on the addition of a soft seed.
+A schematic describing infrared safety problem is shown in Figure~\ref{fig:infraredSafe}.
+Here an infrared safe algorithm would use the three particles as seeds iteratively find two stable cones.
+An unsafe algorithm however would find three overlapping cones based on the addition of a soft seed.
 
 \begin{figure}[htp]
 \centering
 \includegraphics[width=.65\textwidth]{theory/infraredSafe}
-\caption{An illustration of infrared unsafe behavior. The particle \pt\ is proportional to the height and the horizontal axis indicates rapidity. Taken from \cite{Salam_2007}. }
+\caption{An illustration of infrared unsafe behavior.
+The particle \pt\ is proportional to the height and the horizontal axis indicates rapidity.
+Taken from \cite{Salam_2007}.
+}
 \label{fig:infraredSafe}
 \end{figure}
 
 % the \antikt\ reconstruction algorithm is used with the distance parameter $R=0.4$
 
-For heavy ion collisions in ATLAS, the inputs to the algorithm are the $\eta \times \phi = 0.1 \times 0.1$ calorimeter towers. The tower energies are determined by summing up the energies of the individual calorimeter cells. The \antikt\ algorithm is first run with the distance parameter $R=0.2$, following which an underlying event subtraction procedure is performed. A first estimate of the average underlying event energy density $\rho_i (\eta)$ is done in 0.1 slices of $\eta$ in each calorimeter layer $i$ after excluding the regions that overlap with the seed jets. A modulation of $2v_{2} \cos[2(\phi-\Psi_2)] $ is applied to account for the flow from the QGP and the underlying event is subtracted to give $E_{Tj}^{\mathrm{sub}}$:
+For heavy ion collisions in ATLAS, the inputs to the algorithm are the $\eta \times \phi = 0.1 \times 0.1$ calorimeter towers.
+The tower energies are determined by summing up the energies of the individual calorimeter cells.
+The \antikt\ algorithm is first run with the distance parameter $R=0.2$, following which an underlying event subtraction procedure is performed.
+A first estimate of the average underlying event energy density $\rho_i (\eta)$ is done in 0.1 slices of $\eta$ in each calorimeter layer $i$ after excluding the regions that overlap with the seed jets.
+A modulation of $2v_{2} \cos[2(\phi-\Psi_2)] $ is applied to account for the flow from the QGP and the underlying event is subtracted to give $E_{Tj}^{\mathrm{sub}}$:
 
 \begin{align}
 E_{Tj}^{\mathrm{sub}} = E_{Tj} - A_j \rho_i (\eta_j) \Big(1+2 \sum_{n=2}^{4} {v_{n}}_i \big(\cos[2(\phi-\Psi_n)] \big) \Big)
 \end{align}
-where $E_{Tj} , \eta_j, \phi_j$ and $A_j$ are the cell $E_T, \eta, \phi$ and area for cell $j$ in layer $i$. This process is done iteratively done one more time after getting new seeds with the distance parameter $R = 0.2$ and excluding areas that are within $\Delta R = 0.4$ of the seeds. Updated values of $\rho{'}_i$ and $v{'}_2$ are recalculated and used to estimate the background that is subtracted from the original cell energies. More details on this procedure can be found in \cite{2013220}.
+where $E_{Tj} , \eta_j, \phi_j$ and $A_j$ are the cell $E_T, \eta, \phi$ and area for cell $j$ in layer $i$.
+This process is done iteratively done one more time after getting new seeds with the distance parameter $R = 0.2$ and excluding areas that are within $\Delta R = 0.4$ of the seeds.
+Updated values of $\rho{'}_i$ and $v{'}_2$ are recalculated and used to estimate the background that is subtracted from the original cell energies.
+More details on this procedure can be found in \cite{2013220}.
 
 
 
 %A few jet measurements and their modifications by the presence of the Quark Gluon Plasma are discussed in Section~\ref{sec:jetMeasurements}.
 %
-
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  jet cross section in  \sqrts = 13 TeV \pp\ collisions can be seen in Figure~\ref{fig:incljetCS}
 %
@@ -152,7 +249,9 @@ where $E_{Tj} , \eta_j, \phi_j$ and $A_j$ are the cell $E_T, \eta, \phi$ and are
 %\begin{figure}[htbp]
 %\begin{center}
 %\includegraphics[width=0.55\textwidth]{figures/theory/incljetCS}
-%\caption{The inclusive jet cross section as a function of \pt\ and $|y|$ as measured by ATLAS. The data are compared to NLO pQCD calculations. Taken from \cite{Aaboud:2017wsi}}
+%\caption{The inclusive jet cross section as a function of \pt\ and $|y|$ as measured by ATLAS.
+%The data are compared to NLO pQCD calculations.
+%Taken from \cite{Aaboud:2017wsi}}
 %\label{fig:incljetCS}
 %\end{center}
 %\end{figure}
@@ -161,21 +260,27 @@ where $E_{Tj} , \eta_j, \phi_j$ and $A_j$ are the cell $E_T, \eta, \phi$ and are
 %
 %
 %
-
+%
 %
 %\begin{figure}[htbp]
 %\begin{center}
 %\includegraphics[width=0.55\textwidth]{figures/theory/inclhadronCS}
-%\caption{The charged particle multiplicities as a function of transverse momentum \pt\ in \sqrts = 13 TeV \pp\ collisions as measured by ATLAS. The data are compared to NLO pQCD calculations. Taken from \cite{201667}. }
+%\caption{The charged particle multiplicities as a function of transverse momentum \pt\ in \sqrts = 13 TeV \pp\ collisions as measured by ATLAS.
+%The data are compared to NLO pQCD calculations.
+%Taken from \cite{201667}.
+%}
 %\label{fig:inclhadronCS}
 %\end{center}
 %\end{figure}
 %
 %
 %
-%Equation~\ref{eq:hadronCS} is written at leading order (LO) and includes contributions from $2\rightarrow2$ cross sections, LO re-summed PDFs and FFs, and single loop expression for the strong coupling \alphas. At next to leading order (NLO), the contributions from real $2\rightarrow3$ and virtual $2\rightarrow3$ processes, as well as the double loop expression for \alphas are included. These calculations describe the inclusive and pQCD, NLO calculations have next to leading order (NLO) calculations that include Figure~\ref{fig:incl_hadron_CS} hows the inclusive jet cross section as measured by ATLAS in \sqrts = 13 TeV \pp\ collisions. 
+%Equation~\ref{eq:hadronCS} is written at leading order (LO) and includes contributions from $2\rightarrow2$ cross sections, LO re-summed PDFs and FFs, and single loop expression for the strong coupling \alphas.
+%At next to leading order (NLO), the contributions from real $2\rightarrow3$ and virtual $2\rightarrow3$ processes, as well as the double loop expression for \alphas are included.
+%These calculations describe the inclusive and pQCD, NLO calculations have next to leading order (NLO) calculations that include Figure~\ref{fig:incl_hadron_CS} hows the inclusive jet cross section as measured by ATLAS in \sqrts = 13 TeV \pp\ collisions.
 %
 %
 %
 %
-%In a heavy ion collision where the QGP is formed, the hard scattering interactions between the partons strongly interact with the QGP due to their color charge and are modified and lose energy via collisions with the medium constituents, or gluon bremsstrahlung. 
+%
+%In a heavy ion collision where the QGP is formed, the hard scattering interactions between the partons strongly interact with the QGP due to their color charge and are modified and lose energy via collisions with the medium constituents, or gluon bremsstrahlung.
