--- a/theory.tex
+++ b/theory.tex
@@ -1,5 +1,6 @@
 % !TEX root = thesis-ex.tex
-This section shall discuss the theoretical background necessary to understand jet measurements. It will discuss the fundamentals of quantum chromodynamics (QCD), the heavy ion collision system and the quark gluon plasma that is formed, and finally jets and jet energy loss. 
+This section shall discuss the theoretical background necessary to understand jet measurements.
+It will discuss the fundamentals of quantum chromodynamics (QCD), the quark gluon plasma and the heavy ion collision system it is formed in, and finally jets and jet energy loss.
 
 remove Refs.~\cite{Roland:2014jsa} .
 \section{Quantum Chromodynamics}
